[Weekly/11] refactor: ImageService delete (#109)